fix scrollbars

--- a/new-site/app/css/main.css
+++ b/new-site/app/css/main.css
@@ -134,3 +134,11 @@ code {
   @apply rounded-sm;
   padding: 2px 5px;
 }
+
+.hide-scrollbar {
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+}
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
+}
